--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@walletconnect/web3-provider": "^1.8.0",
     "bootstrap": "^5.2.3",
+    "ethereum-multicall": "^2.15.0",
     "ethers": "^5.7.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
