--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "ethers": "^5.7.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
+    "react-countdown": "^2.3.5",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.6.2",
     "react-scripts": "5.0.1",
