--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "bootstrap": "^5.2.3",
     "ethereum-multicall": "^2.15.0",
     "ethers": "^5.7.2",
+    "papaparse": "^5.3.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
     "react-countdown": "^2.3.5",
